tera/src/snapshot_tests/snapshots/tera__snapshot_tests__build_errors__build_errors@validation__unknown_block_in_child.txt.snap
---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/validation/unknown_block_in_child.txt
---
error: Block `sidebar` is not defined in any parent template
 --> child:3:10
  |
3 | {% block sidebar %}not in parent{% endblock sidebar %}
  |          ^^^^^^^
